Center text on page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 
 		<title>Boxes Sydney</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
 	<body>
-					<h1>BOXES SYDNEY
+		<h1>BOXES SYDNEY</h1>
 
 		<h2>Corrugated Cardboard Boxes for Sale</h2>
 
 		<h3>Secondhand, New or Custom made Corrugated Cardboard Boxes</h3>
 
 		<p>Follow the links to find the right cardboard box to suit your application</p>
+	</body>
+</html>
