--- a/Unit3/index.html
+++ b/Unit3/index.html
@@ -3,8 +3,9 @@
 <html>
 
 	<head>
-		<title>Boxes Sydney</title>
+		<title>Boxes Sydney, Australia</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="hero-image">
@@ -12,14 +13,15 @@
 		</div>
 
 	 	<h1>Boxes Sydney</h1>
-		<p id="slogan">Boxes for You</p>
+		<p id="slogan">Don't have a slogan yet!</p>
 
 		<p>As the name says, we supply boxes to the Sydney area, existing and or bespoke cardboard boxes.</p>
 
 		<ul>
-			<li>Pre-Made Boxes</li>
-			<li>Made to Order Boxes</li>
+			<li>Pre-Made cardboard Boxes</li>
+			<li>Made to Order corrugated cardboard Boxes</li>
 			<li>EasyBOX style innovative boxes</li>
+			<li>But wait, there's more... email to find out 
 		</ul>
 
 		<p>
