Unit 4 Project Birds
Created a CSS folder to correct viewing error

--- a/Unit 4 Project Birds/index.html
+++ b/Unit 4 Project Birds/index.html
@@ -3,19 +3,19 @@
 <html>
 
 	<head>
-		<title>Leichhardt Birds</title>
+		<title>Birds of the Leichhardt Precinct</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="hero-image">
 			<img src="images/2 kookascopyright 1.jpg">
 		</div>
 
-	 	<h1>Birds of Leichhardt</h1>
-		<p id="slogan">Dedicated to Avian Life of Leichhardt, Sydney</p>
+	 	<h1>Birds of the Leichhardt Precinct</h1>
+		<p id="slogan">A site dedicated to the Avian Life of the Leichhardt Precinct, Sydney</p>
 
-		<p>Paying homage to the beautiful feathered friends that visit our inner city back yards in the Leichhardt precinct area</p>
+		<p>Paying homage to the beautiful feathered friends that visit our inner city yards in the Leichhardt Precinct</p>
 
 		<ul>
 			<li>Kookaburras</li>
