Changed titles to lower case and no space

--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="hero-image">
-			<img src="images/2 kookascopyright 1.jpg">
+			<img src="images/2kookascopyright1.jpg">
 		</div>
 
 	 	<h1>Birds of the Leichhardt Precinct</h1>
