Unit5and6projectwireframes
Solo project due to being down-under for a photography website which
includes a blog page

--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<div class="hero-image">
+			<img src="images/noisyminer.jpg">
 			<img src="images/2kookascopyright1.jpg">
+			<img src="images/newhollandhoneyeater.jpg">
 		</div>
 
 	 	<h1>Birds of the Leichhardt Precinct</h1>
