Unit 5and6 project
updated with John's suggested changes. May not have done them correctly
as some don't seem to have corrected the issues

--- a/Unit5/index.html
+++ b/Unit5/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <html>	
+
 	<head>	
 		<title>Sarah Hallacher Photography</title>
+		<title> CSS reset links</title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
@@ -18,43 +20,45 @@
 		    </nav>
 		</header>
 		<h1>Sarah Hallacher PHOTOGRAPHY</h2>
-		<h2>Where art meets the Lens</h2>	
+		<h2>Where art meets the Lens</h2>
+	<section> 	
 		<figure> 
-			<img src="images/brunch.jpg" alt="Brunch"><figcaption>Brunch</figcaption>
+			<img src="images/brunch.jpg" alt="Brunch"> <figcaption>Brunch</figcaption> 
 		</figure>
 		<figure>  
-			<img src="images/bacon.jpg" alt="Bacon"> <figcaption>Bacon</figcaption>
+			<img src="images/bacon.jpg" alt="Bacon"> <figcaption>Bacon</figcaption> 
 		</figure>
 		<figure>  
-			<img src="images/chai.jpg" alt="Chai"> <figcaption>Chai</figcaption>
+			<img src="images/chai.jpg" alt="Chai"> <figcaption>Chai</figcaption> 
 		</figure> 
 		<figure> 
-			<img src="images/photobooth.jpg" alt="Photobooth"> <figcaption>Photobooth</figcaption>
+			<img src="images/photobooth.jpg" alt="Photobooth"> <figcaption>Photobooth</figcaption> 
 		</figure>
 		<figure>  
-			<img src="images/cupcakes.jpg" alt="Cupcakes"><figcaption>Cupcakes</figcaption>
+			<img src="images/cupcakes.jpg" alt="Cupcakes"><figcaption>Cupcakes</figcaption> 
 		</figure> 
 		<figure> 
-			<img src="images/nuts.jpg" alt="Nuts"> <figcaption>Nuts</figcaption>
+			<img src="images/nuts.jpg" alt="Nuts"> <figcaption>Nuts</figcaption> 
 		</figure> 
 		<figure> 
-			<img src="images/pinecones.jpg" alt="Pinecones"><figcaption>Pinecones</figcaption>
+			<img src="images/pinecones.jpg" alt="Pinecones"><figcaption>Pinecones</figcaption> 
 		</figure> 
 		<figure> 
-			<img src="images/cocoa.jpg" alt="Cocoa"><figcaption>Cocoa</figcaption>
+			<img src="images/cocoa.jpg" alt="Cocoa"><figcaption>Cocoa</figcaption> 
 		</figure> 
 		<figure> 
-			<img src="images/yarn.jpg" alt="Yarn"><figcaption>Yarn</figcaption>
+			<img src="images/yarn.jpg" alt="Yarn"><figcaption>Yarn</figcaption> 
 		</figure>
+	</section> 
 
 		<p id="slogan"></p>
 
 	<footer>
+		<div>
 		<p>Sarah Hallacher PHOTOGRAPHY </a>.</p>
-	</footer>
-		<div>	
-			<p>Contact Information:<a href="mailto:geewhizreally@gmail.com"></p>
+		<p>Contact Information:<a href="mailto:geewhizreally@gmail.com"></p>
 		</div>	
+	</footer>	
 	</body>
 </html>
 
