Updated pages for help from mentors
need help to remove the footer that has come across the blog page, also
centre the image caption and space between 2 images, text next to first
image centred left as in the 2nd image

--- a/Unit5/blog.html
+++ b/Unit5/blog.html
@@ -32,16 +32,17 @@
       <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
     </div>
     </section>
-    <figure> 
+    <figure class="blog-figures"> 
       <img src="images/brunch.jpg" alt="Brunch"><figcaption>Brunch</figcaption>
       <img src="images/photobooth.jpg" alt="Photobooth"><figcaption>Photobooth</figcaption>
-    </figure>
-      
+    </figure>  
     </div>
     <p id="slogan"></p>
     <footer>
-      <p>Sarah Hallacher PHOTOGRAPHY </p>
-      <p>Contact Information:<a href="mailto:geewhizreally@gmail.com"> </a>.</p>
+      <p>
+        <span>Sarah Hallacher PHOTOGRAPHY</span>
+        <span class="contact-info">Contact Information:<a href="mailto:geewhizreally@gmail.com">Email me</a></span>
+      </p>
     </footer> 
   </body>
 </html>
