--- a/Unit5/index.html
+++ b/Unit5/index.html
@@ -21,44 +21,41 @@
 		</header>
 		<h1>Sarah Hallacher PHOTOGRAPHY</h2>
 		<h2>Where art meets the Lens</h2>
-	<section> 	
-		<figure> 
-			<img src="images/brunch.jpg" alt="Brunch"> <figcaption>Brunch</figcaption> 
-		</figure>
-		<figure>  
-			<img src="images/bacon.jpg" alt="Bacon"> <figcaption>Bacon</figcaption> 
-		</figure>
-		<figure>  
-			<img src="images/chai.jpg" alt="Chai"> <figcaption>Chai</figcaption> 
-		</figure> 
-		<figure> 
-			<img src="images/photobooth.jpg" alt="Photobooth"> <figcaption>Photobooth</figcaption> 
-		</figure>
-		<figure>  
-			<img src="images/cupcakes.jpg" alt="Cupcakes"><figcaption>Cupcakes</figcaption> 
-		</figure> 
-		<figure> 
-			<img src="images/nuts.jpg" alt="Nuts"> <figcaption>Nuts</figcaption> 
-		</figure> 
-		<figure> 
-			<img src="images/pinecones.jpg" alt="Pinecones"><figcaption>Pinecones</figcaption> 
-		</figure> 
-		<figure> 
-			<img src="images/cocoa.jpg" alt="Cocoa"><figcaption>Cocoa</figcaption> 
-		</figure> 
-		<figure> 
-			<img src="images/yarn.jpg" alt="Yarn"><figcaption>Yarn</figcaption> 
-		</figure>
-	</section> 
-
-		<p id="slogan"></p>
-
-	<footer>
-		<div>
-		<p>Sarah Hallacher PHOTOGRAPHY </a>.</p>
-		<p>Contact Information:<a href="mailto:geewhizreally@gmail.com"></p>
-		</div>	
-	</footer>	
+		<section class="homepage-figures clearfix"> 	
+			<figure> 
+				<img src="images/brunch.jpg" alt="Brunch"> <figcaption>Brunch</figcaption>
+			</figure>
+			<figure>  
+				<img src="images/bacon.jpg" alt="Bacon"> <figcaption>Bacon</figcaption> 
+			</figure>
+			<figure>  
+				<img src="images/chai.jpg" alt="Chai"> <figcaption>Chai</figcaption> 
+			</figure> 
+			<figure> 
+				<img src="images/photobooth.jpg" alt="Photobooth"> <figcaption>Photobooth</figcaption>
+			</figure>
+			<figure>  
+				<img src="images/cupcakes.jpg" alt="Cupcakes"> <figcaption>Cupcakes</figcaption> 
+			</figure> 
+			<figure> 
+				<img src="images/nuts.jpg" alt="Nuts"> <figcaption>Nuts</figcaption>
+			</figure> 
+			<figure> 
+				<img src="images/pinecones.jpg" alt="Pinecones"> <figcaption>Pinecones</figcaption>
+			</figure> 
+			<figure> 
+				<img src="images/cocoa.jpg" alt="Cocoa"> <figcaption>Cocoa</figcaption>
+			</figure> 
+			<figure> 
+				<img src="images/yarn.jpg" alt="Yarn"> <figcaption>Yarn</figcaption>
+			</figure>
+		</section> 
+		<footer>
+			<p>
+				<span>Sarah Hallacher PHOTOGRAPHY</span>
+				<span class="contact-info">Contact Information:<a href="mailto:geewhizreally@gmail.com">Email me</a></span>
+			</p>
+		</footer>	
 	</body>
 </html>
 
