Unit 7 Mobile Responsive Wireframes
Home and Blog pages for Birds of Leichhardt site showing pics and
including snippets of sounds if possible, very simple

--- a/Unit5/blog.html
+++ b/Unit5/blog.html
@@ -20,13 +20,13 @@
       <h2>Where art meets the Lens</h2> 
     <section>
     <div class="column">
-    <img class="images/brunch"
+    <img class="images/brunch">
     </div>
     <div class="column">
       <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
     </div>
     <div class="column">
-    <img class="images/photobooth"
+    <img class="images/photobooth">
     </div>
     <div class="column">
       <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
