--- a/Unit5/index.html
+++ b/Unit5/index.html
@@ -52,8 +52,8 @@
 		</section> 
 		<footer>
 			<p>
-				<span>Sarah Hallacher PHOTOGRAPHY</span>
-				<span class="contact-info">Contact Information:<a href="mailto:geewhizreally@gmail.com">Email me</a></span>
+				<a><span class="title">Sarah Hallacher PHOTOGRAPHY</a></span>
+				<a><span class="Contact Information"><a href="mailto:geewhizreally@gmail.com">Email me</a></span>
 			</p>
 		</footer>	
 	</body>
