UNit5and6 Project Sarah Hallacher Photography
Fixed footer in wrong location

--- a/Unit5/blog.html
+++ b/Unit5/blog.html
@@ -18,25 +18,20 @@
     </header>
       <h1>Sarah Hallacher PHOTOGRAPHY</h2>
       <h2>Where art meets the Lens</h2> 
-    <section>
+    <section class="clearfix">
     <div class="column">
-    <img class="images/brunch">
+      <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
+    </div>
+     <div class="column">
+    <img src="images/brunch.jpg">
     </div>
     <div class="column">
       <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
     </div>
     <div class="column">
-    <img class="images/photobooth">
+    <img src="images/photobooth.jpg">
     </div>
-    <div class="column">
-      <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
-    </div>
-    </section>
-    <figure class="blog-figures"> 
-      <img src="images/brunch.jpg" alt="Brunch"><figcaption>Brunch</figcaption>
-      <img src="images/photobooth.jpg" alt="Photobooth"><figcaption>Photobooth</figcaption>
-    </figure>  
-    </div>
+    </section> 
     <footer>
       <p>
         <span>Sarah Hallacher PHOTOGRAPHY</span>
