Unit4nowUnit8Project Birds
Changes to CSS metatag added to become mobile responsive

--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -3,9 +3,10 @@
 <html>
 
 	<head>
-		<title>Birds of the Leichhardt Precinct</title>
+		<title>Birds of Leichhardt</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, inital scale-1">
 	</head>
 	<body>
 		<div class="hero-image">
@@ -14,7 +15,7 @@
 			<img src="images/newhollandhoneyeater.jpg">
 		</div>
 
-	 	<h1>Birds of the Leichhardt Precinct</h1>
+	 	<h1>Birds of Leichhardt</h1>
 		<p id="slogan">A site dedicated to the Avian Life of the Leichhardt Precinct, Sydney</p>
 
 		<p>Paying homage to the beautiful feathered friends that visit our inner city yards in the Leichhardt Precinct</p>
@@ -25,6 +26,7 @@
 			<li>Bulbuls</li>
 			<li>Noisy Miners</li>
 			<li>New Holland Honeyeaters</li>
+			<li>Wattle Birds</li>
 			<li>Goshawks</li>
 			<li>Magpies</li>
 
