Unit4now8mobile responsive
Added 2 media queries

--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -9,16 +9,17 @@
 		<meta name="viewport" content="width=device-width, inital scale-1">
 	</head>
 	<body>
+	<header>
+		 	<img src="images/Birdslogo.png">
 		<div class="hero-image">
 			<img src="images/noisyminer.jpg">
 			<img src="images/2kookascopyright1.jpg">
 			<img src="images/newhollandhoneyeater.jpg">
 		</div>
-
 	 	<h1>Birds of Leichhardt</h1>
 		<p id="slogan">A site dedicated to the Avian Life of the Leichhardt Precinct, Sydney</p>
 
-		<p>Paying homage to the beautiful feathered friends that visit our inner city yards in the Leichhardt Precinct</p>
+		<p>Paying homage to the feathered friends that visit our inner city yards in the Leichhardt Precinct</p>
 
 		<ul>
 			<li>Kookaburras</li>
@@ -31,9 +32,5 @@
 			<li>Magpies</li>
 
 		</ul>
-
-	
-
 	</body>
-
 </html>
