--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -1,36 +1,56 @@
 <!DOCTYPE html>
 
 <html>
-
 	<head>
-		<title>Birds of Leichhardt</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, inital scale-1">
 	</head>
 	<body>
-	<header>
+		<header>
 		 	<img src="images/Birdslogo.png">
-		<div class="hero-image">
-			<img src="images/noisyminer.jpg">
-			<img src="images/2kookascopyright1.jpg">
-			<img src="images/newhollandhoneyeater.jpg">
-		</div>
-	 	<h1>Birds of Leichhardt</h1>
-		<p id="slogan">A site dedicated to the Avian Life of the Leichhardt Precinct, Sydney</p>
-
+		 	<nav>
+		      <ul>
+		        <li class="home"><a href="index.html">Home</a></li>
+		        <li class="blog"><a href="blog.html">Blog</a></li>
+		        <li class="contact"><a href="mailto:geewhizreally@gmail.com">Contact</a></li>
+		      </ul>
+		    </nav>
+		</header>
+	<section>
+			<section class="homepage-figures clearfix"> 
+			<figure> 
+				<img src="images/noisyminer.jpg" alt="Noisyminer"> <figcaption>Noisyminer</figcaption> 
+			</figure>
+			<figure> 
+				<img src="images/2kookascopyright1.jpg" alt="2 Kookaburras"> <figcaption>Two Kookaburras on hills hoist</figcaption>
+			</figure>
+			<figure>  
+				<img src="images/newhollandhoneyeater.jpg" alt="New Holland Honeyeater"> <figcaption>New Holland Honeyeater on hills hoist</figcaption> 
+			</figure> 
+	</section> 
+	 <h1>Birds of Leichhardt</h1>
+	 <h2> Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
 		<p>Paying homage to the feathered friends that visit our inner city yards in the Leichhardt Precinct</p>
-
 		<ul>
 			<li>Kookaburras</li>
 			<li>Fairy Wrens</li>
 			<li>Bulbuls</li>
+			<li>Butcher Birds</li>
 			<li>Noisy Miners</li>
 			<li>New Holland Honeyeaters</li>
 			<li>Wattle Birds</li>
 			<li>Goshawks</li>
+			<li>Lorikeets</li>
 			<li>Magpies</li>
-
+			<li>Sparrows</li>
 		</ul>
 	</body>
+		<footer>
+			<p>
+				<a><span class="title">Birds of Leichhardt</a></span>
+				<a><span class="Contact Information"><a href="mailto:geewhizreally@gmail.com">Email me</a></span>
+			</p>
+		</footer>	
 </html>
