Unit4 - 8 Main Project Birds updated
Issue with sizing pics on both home and blog page. If you can please
advise. I am sure there are other issues with the code but this one has
me stumped, again.

--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -19,20 +19,9 @@
 		    </nav>
 		</header>
 	<section>
-			<section class="homepage-figures clearfix"> 
-			<figure> 
-				<img src="images/noisyminer.jpg" alt="Noisyminer"> <figcaption>Noisyminer</figcaption> 
-			</figure>
-			<figure> 
-				<img src="images/2kookascopyright1.jpg" alt="2 Kookaburras"> <figcaption>Two Kookaburras on hills hoist</figcaption>
-			</figure>
-			<figure>  
-				<img src="images/newhollandhoneyeater.jpg" alt="New Holland Honeyeater"> <figcaption>New Holland Honeyeater on hills hoist</figcaption> 
-			</figure> 
-	</section> 
-	 <h1>Birds of Leichhardt</h1>
-	 <h2> Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
-		<p>Paying homage to the feathered friends that visit our inner city yards in the Leichhardt Precinct</p>
+		<h1>Birds of Leichhardt</h1>
+	 	<h2> Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
+		<p>Paying homage to the feathered friends that visit my inner city back yard</p>
 		<ul>
 			<li>Kookaburras</li>
 			<li>Fairy Wrens</li>
@@ -46,6 +35,45 @@
 			<li>Magpies</li>
 			<li>Sparrows</li>
 		</ul>
+	</section>
+			<section class="homepage-figures clearfix"> 
+			<figure> 
+				<img src="images/noisyminer.jpg" alt="Noisyminer"> <figcaption>Noisyminer</figcaption> 
+			</figure>
+			<figure> 
+				<img src="images/Kooka Statue.jpg" alt="Kookaburra"> <figcaption>Kookaburra on hills hoist</figcaption>
+			</figure>
+			<figure>  
+				<img src="images/New Holland Honeyeater.jpg" alt="New Holland Honeyeater"> <figcaption>New Holland Honeyeater</figcaption> 
+			</figure> 
+			<figure> 
+				<img src="images/sparrowcopyright.jpg" alt="Sparrow"> <figcaption>Sparrow</figcaption> 
+			</figure>
+			<figure> 
+				<img src="images/Coellecopyright.jpg" alt="Coelle"> <figcaption>Coelle</figcaption>
+			</figure>
+			<figure>  
+				<img src="images/Butcherbirdcopyright.jpg" alt="Butcher Bird"> <figcaption>Butcher Bird</figcaption> 
+			</figure> 
+			<figure> 
+				<img src="images/Lorikeet.jpg" alt="Lorikeet"> <figcaption>Lorikeet</figcaption> 
+			</figure>
+			<figure> 
+				<img src="images/Neville.jpg" alt="Blue Fairy Wren"> <figcaption>Superb Blue Fairy Wren</figcaption>
+			</figure>
+			<figure> 
+				<img src="images/Female Superb Fairy Wren.jpg" alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren</figcaption>
+			</figure>
+			<figure>  
+				<img src="images/Maggie.jpg" alt="Male Magpie"> <figcaption>Magpie</figcaption> 
+			</figure>
+			<figure> 
+				<img src="images/Bulbul.jpg" alt="Bulbul"> <figcaption>Bulbul</figcaption>
+			</figure>
+			<figure> 
+				<img src="images/Goshawk.jpg" alt="Goshawk"> <figcaption>Goshawk</figcaption>
+			</figure>
+	</section>  
 	</body>
 		<footer>
 			<p>
