Unit 8 Media queries applied
Changed background colour, stacked images vertically, still need to
change some other elements

--- a/Unit4ProjectBirds/Blog.html
+++ b/Unit4ProjectBirds/Blog.html
@@ -22,18 +22,20 @@
 		<h1>Birds of Leichhardt</h1>
 	 	<h2> Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
 		<p>Paying homage to the feathered friends that visit my inner city back yard</p>
-		<section class="clearfix">
+	<section class="clearfix">
+	<div class="blog-figures">
 	<div class="column">
       <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
     </div>
-     <div class="column">
-    <img src="images/2kookas.jpg"><alt="Two Kookaburras on the clothes hoist"> <figcaption>Two Kookaburras on the clothes hoist</figcaption>
-    </div>
+     <figure class="column">
+    <img src="images/2kookas.jpg" alt="Two Kookaburras on the clothes hoist"> <figcaption>Two Kookaburras on the clothes hoist</figcaption>
+    </figure>
     <div class="column">
       <p> Lorem ipsum dolor sit amet, usu ut volumus ponderum nominati, dicta imperdiet sed ad. Nostro offendit mel ea. Utinam prompta deserunt has eu, pro et idque denique apeirian. Ignota constituam ex duo, postea adipiscing pro in. Vidit facete tritani vix te, sint everti indoctum te ius, eleifend reformidans delicatissimi ut his.</p>
     </div>
-    <div class="column">
-    <img src="images/Jill.jpg"><alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren with twig in beak</figcaption>
+    <figure class="column">
+    <img src="images/Jill.jpg" alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren with twig in beak</figcaption>
+    </figure>
     </div>
     </section> 
     <footer>
