--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -23,17 +23,23 @@
 	 	<h2> Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
 		<p>Paying homage to the feathered friends that visit my inner city back yard</p>
 		<ul>
-			<li>Kookaburras</li>
-			<li>Fairy Wrens</li>
+			<li>Blackbirds</li>
 			<li>Bulbuls</li>
 			<li>Butcher Birds</li>
-			<li>Noisy Miners</li>
-			<li>New Holland Honeyeaters</li>
-			<li>Wattle Birds</li>
+			<li>Coelles</li>
 			<li>Goshawks</li>
+			<li>Kookaburras</li>
 			<li>Lorikeets</li>
 			<li>Magpies</li>
+			<li>New Holland Honeyeaters</li>
+			<li>Noisy Miners</li>
+			<li>Short Nosed Corellas</li>
+			<li>Silver Eyes</li>
 			<li>Sparrows</li>
+			<li>Spotted Turtle Neck Doves</li>
+			<li>Superb Fairy Wrens</li>
+			<li>Wattle Birds</li>
+			<li>Willy Wagtails</li>
 		</ul>
 	</section>
 			<section class="homepage-figures clearfix"> 
@@ -41,22 +47,22 @@
 				<img src="images/noisyminer.jpg" alt="Noisyminer"> <figcaption>Noisyminer</figcaption> 
 			</figure>
 			<figure> 
-				<img src="images/Kooka Statue.jpg" alt="Kookaburra"> <figcaption>Kookaburra on hills hoist</figcaption>
+				<img src="images/Kooka Statue.jpg" alt="Kookaburra"> <figcaption>Kookaburra</figcaption>
 			</figure>
 			<figure>  
 				<img src="images/New Holland Honeyeater.jpg" alt="New Holland Honeyeater"> <figcaption>New Holland Honeyeater</figcaption> 
 			</figure> 
 			<figure> 
-				<img src="images/sparrowcopyright.jpg" alt="Sparrow"> <figcaption>Sparrow</figcaption> 
+				<img src="images/blackbirdmale.jpg" alt="Blackbird"> <figcaption>Male Blackbird</figcaption> 
 			</figure>
 			<figure> 
-				<img src="images/Coellecopyright.jpg" alt="Coelle"> <figcaption>Coelle</figcaption>
+				<img src="images/Coelle.jpg" alt="Coelle"> <figcaption>Coelle</figcaption>
 			</figure>
 			<figure>  
 				<img src="images/Butcherbirdcopyright.jpg" alt="Butcher Bird"> <figcaption>Butcher Bird</figcaption> 
 			</figure> 
 			<figure> 
-				<img src="images/Lorikeet.jpg" alt="Lorikeet"> <figcaption>Lorikeet</figcaption> 
+				<img src="images/2lorikeets.jpg" alt="2 Lorikeets"> <figcaption>Lorikeets</figcaption> 
 			</figure>
 			<figure> 
 				<img src="images/Neville.jpg" alt="Blue Fairy Wren"> <figcaption>Superb Blue Fairy Wren</figcaption>
@@ -65,10 +71,10 @@
 				<img src="images/Female Superb Fairy Wren.jpg" alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren</figcaption>
 			</figure>
 			<figure>  
-				<img src="images/Maggie.jpg" alt="Male Magpie"> <figcaption>Magpie</figcaption> 
+				<img src="images/maggieportrait.jpg" alt="Male Magpie"> <figcaption>Magpie</figcaption> 
 			</figure>
 			<figure> 
-				<img src="images/Bulbul.jpg" alt="Bulbul"> <figcaption>Bulbul</figcaption>
+				<img src="images/bulbul2.jpg" alt="Bulbul"> <figcaption>Bulbul aka Hat top</figcaption>
 			</figure>
 			<figure> 
 				<img src="images/Goshawk.jpg" alt="Goshawk"> <figcaption>Goshawk</figcaption>
