--- a/Unit4ProjectBirds/Blog.html
+++ b/Unit4ProjectBirds/Blog.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, inital scale-1">
 	</head>
 	<body>
-		<header>
+		<header class="clearfix">
 		 	<img src="images/Birdslogo.png">
 		 	<nav>
 		      <ul>
@@ -20,34 +20,35 @@
 		</header>
 	<section>
 		<h1>Birds of Leichhardt</h1>
-	 	<h2> BLOG</h2>
-		<h3>Everyday is filled with wonder as I 'wonder' who will 'wander' into the garden today</h3>
+	 	<h2>BLOG</h2>
+		<h3>Everyday is filled with wonder, as I 'wonder' who will 'wander' into the garden today</h3>
+	</section>
 	<section class="clearfix">
 	<div class="blog-figures">
 	<div class="column">
-      <p>These Kookaburras usually travel in a pack of 3. These 2 are male and female with the third an older bird, possibly a parent. One can see all 3 fly into the back yard just as dawn rises. The female is a beautiful bird who chats with me with "clook clook" sounds. They have been in the area for decades and have visited my yard from before I arrived. The female who I have nicknamed simply "Kooka" comes during her breeding season between November and Februaury each year. She will spend hours atop the hills hoist staring into the garden and then swoop in and pick up a lizard or insect. Other birds fear her and make distress calls, some who have nearby nests try to chase her away, other birds simply hide. She has a direct line of sight to me inside the kitchen, so when she wants a piece of meat she will stare straight at me. If I don't come out she will call out with the trademark Kookaburra laugh.</p>
+      <p>These Kookaburras usually travel in a pack of 3. These 2 are male and female with the third an older bird, possibly a parent. One can see all 3 fly into the back yard just as dawn rises. The female is a beautiful bird who chats with me with "clook clook" sounds. They have been in the area for decades and have visited my yard from before I arrived. When I moved here one of the Kookdaburras would wait outside the kitchen each day at 3pm. Not being experienced with wild birds I didn't understand that it wanted some meat and whoever lived in my house before me had a ritual of giving this kookaburra a piece of meat each day. The female who I have nicknamed simply "Kooka" comes during her breeding season between November and Februaury each year. She will spend hours atop the hills hoist staring into the garden and then swoop in and pick up a lizard or insect. Other birds fear her and make distress calls, some who have nearby nests try to chase her away, other birds simply hide. She has a direct line of sight to me inside the kitchen, so when she wants a piece of meat she will stare straight at me. If I don't come out she will call out with the trademark Kookaburra laugh.</p>
     </div>
      <figure class="column">
     <img src="images/2kookas.jpg" alt="Two Kookaburras on the clothes hoist"> <figcaption>Two Kookaburras on the clothes hoist</figcaption>
     </figure>
     <div class="column">
-      <p> This is the older female superb fairy wren who has been nicknamed Jill. A dainty and delicate bird who is pictured with a twig in her beak for her nest. She and her male mate who is nicknamed Neville have lived here for several years. In 2013, they built a nest in a pot plant and laid an egg. Unfortunately a predator destroyed the nest and egg. This was very sad and I could not see or hear the wrens for weeks. Then one day they re-appeared and made a new nest in the macadamia tree. A few weeks later a female wren appeared with her parents, Neville and Jill. She has been nicknamed Jill junior. In 2014, another baby wren was born, another female. So, now the Wren family consists of 3 females and 1 male. They're trill can be heard as they flit around the yard.</p>
+      <p> This is the older female superb fairy wren who has been nicknamed Jill. A dainty and delicate bird who is pictured with a twig in her beak that she used to build her nest. She and her male mate, the blue wren, who is nicknamed Neville have lived here for several years. In 2013, they built a nest in a pot plant and laid an egg. Unfortunately a predator destroyed the nest and egg. This was very sad and I could not see or hear the wrens for weeks. Then one day they re-appeared and made a new nest in the macadamia tree. A few weeks later a female wren appeared with her parents, Neville and Jill. She has been nicknamed Jill junior. In 2014, another baby wren was born, another female. So, now the Wren family consists of the 1 blue male and his harem of 3 females. They're trills can be heard as they flit around the yard usually at dusk</p>
     </div>
     <figure class="column">
     <img src="images/Jill.jpg" alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren with twig in beak</figcaption>
     </figure>
      <div class="column">
-      <p> A couple of blackbirds built their nest inside a stone carved wall mounted pot. This pot hung outside the laundry under a roof. Each day the male and female blackbirds took turns to sit on their eggs. Over a few weeks I saw 6 hatchlings turn into birds, who would soon fly the coop. Blackbirds are known for building nests close to people as a way of protecting themselves from predators. They are also renowned for their birdsong which is why the English convicts brought them to Australia in the 1800's so they could hear the enchanting birdsong of the blackbirds.  </p>
+      <p> A couple of blackbirds built their nest inside a stone carved wall mounted pot. This pot hung outside the laundry under a roof. Each day the male and female blackbirds took turns to sit on their eggs. Over a few weeks I saw 6 hatchlings turn into birds, who would soon fly the coop. Blackbirds are known for building nests close to people as a way of protecting themselves from predators. They are also renowned for their birdsong which is why the English convicts brought them to Australia in the 1800's so they could hear the enchanting birdsong of the blackbirds from their homeland.  </p>
     </div>
     <figure class="column">
     <img src="images/Blackbirds.jpg" alt="Blackbirds"> <figcaption>Baby Blackbirds in wall pot with mother blackbird</figcaption>
     </figure>
     </section> 
-    <footer>
-      <p>
-        <a><span class="title">Birds of Leichhardt</a></span>
-		<a><span class="Contact Information"><a href="mailto:geewhizreally@gmail.com">Email me</a></span>
-      </p>
-    </footer> 
+    <footer class="clearfix">
+			<p>
+				<span class="title"><a href="#">Birds of Leichhardt</a></span>
+				<span class="contact-info"><a href="mailto:geewhizreally@gmail.com">Contact</a></span>
+			</p>
+		</footer>
   </body>
 </html>
