--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -6,9 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, inital scale-1">
+		<title>Birds of Leichhardt</title>
 	</head>
 	<body>
-		<header>
+		<header class="clearfix">
 		 	<img src="images/Birdslogo.png">
 		 	<nav>
 		      <ul>
@@ -20,8 +21,8 @@
 		</header>
 	<section>
 		<h1>Birds of Leichhardt</h1>
-	 	<h2> Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
-		<p>Paying homage to the feathered friends that visit my inner city back yard</p>
+	 	<h2>Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
+		<h3>Paying homage to the feathered friends that visit my inner city back yard</h3>
 		<ul>
 			<li>Blackbirds</li>
 			<li>Bulbuls</li>
@@ -74,17 +75,17 @@
 				<img src="images/maggieportrait.jpg" alt="Male Magpie"> <figcaption>Magpie</figcaption> 
 			</figure>
 			<figure> 
-				<img src="images/bulbul2.jpg" alt="Bulbul"> <figcaption>Bulbul aka Hat top</figcaption>
+				<img src="images/bulbul2.jpg" alt="Bulbul"> <figcaption>Bulbul</figcaption>
 			</figure>
 			<figure> 
 				<img src="images/Goshawk.jpg" alt="Goshawk"> <figcaption>Goshawk</figcaption>
 			</figure>
 	</section>  
-	</body>
-		<footer>
+		<footer class="clearfix">
 			<p>
-				<a><span class="title">Birds of Leichhardt</a></span>
-				<a><span class="Contact Information"><a href="mailto:geewhizreally@gmail.com">Email me</a></span>
+				<span class="title"><a href="#">Birds of Leichhardt</a></span>
+				<span class="contact-info"><a href="mailto:geewhizreally@gmail.com">Contact</a></span>
 			</p>
-		</footer>	
+		</footer>
+	</body>	
 </html>
