Final Project Birds

--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -21,13 +21,14 @@
 		</header>
 	<section>
 		<h1>Birds of Leichhardt</h1>
-	 	<h2>Dedicated to the avian Life of the Leichhardt Precinct, Sydney</h2>
+	 	<h2>Dedicated to the avian Life of the Leichhardt Precinct, Sydney Australia</h2>
 		<h3>Paying homage to the feathered friends that visit my inner city back yard</h3>
 		<ul>
 			<li>Blackbirds</li>
 			<li>Bulbuls</li>
 			<li>Butcher Birds</li>
 			<li>Coelles</li>
+			<li>Eastern Spinebill Honeyeaters
 			<li>Goshawks</li>
 			<li>Kookaburras</li>
 			<li>Lorikeets</li>
