--- a/Unit4ProjectBirds/index.html
+++ b/Unit4ProjectBirds/index.html
@@ -31,6 +31,7 @@
 			<li>Eastern Spinebill Honeyeaters
 			<li>Goshawks</li>
 			<li>Kookaburras</li>
+			<li>Kurrawongs</li>
 			<li>Lorikeets</li>
 			<li>Magpies</li>
 			<li>New Holland Honeyeaters</li>
