--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -50,7 +50,7 @@
 				<img src="images/noisyminer.jpg" alt="Noisyminer"> <figcaption>Noisyminer</figcaption> 
 			</figure>
 			<figure> 
-				<img src="images/Kooka Statue.jpg" alt="Kookaburra"> <figcaption>Kookaburra</figcaption>
+				<img src="images/Kooka statue.jpg" alt="Kookaburra"> <figcaption>Kookaburra</figcaption>
 			</figure>
 			<figure>  
 				<img src="images/New Holland Honeyeater.jpg" alt="New Holland Honeyeater"> <figcaption>New Holland Honeyeater</figcaption> 
