--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -62,7 +62,7 @@
 				<img src="images/Coelle.jpg" alt="Coelle"> <figcaption>Coelle</figcaption>
 			</figure>
 			<figure>  
-				<img src="images/Butcherbirdcopyright.jpg" alt="Butcher Bird"> <figcaption>Butcher Bird</figcaption> 
+				<img src="images/ButcherBirdcopyright.jpg" alt="Butcher Bird"> <figcaption>Butcher Bird</figcaption> 
 			</figure> 
 			<figure> 
 				<img src="images/2lorikeets.jpg" alt="2 Lorikeets"> <figcaption>Lorikeets</figcaption> 
@@ -71,7 +71,7 @@
 				<img src="images/Neville.jpg" alt="Blue Fairy Wren"> <figcaption>Superb Blue Fairy Wren</figcaption>
 			</figure>
 			<figure> 
-				<img src="images/Female Superb Fairy Wren.jpg" alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren</figcaption>
+				<img src="images/female superb fairy wren.jpg" alt="Superb Female Fairy Wren"> <figcaption>Superb Female Fairy Wren</figcaption>
 			</figure>
 			<figure>  
 				<img src="images/maggieportrait.jpg" alt="Male Magpie"> <figcaption>Magpie</figcaption> 
